<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.okcomputers.tictactoe.MainActivity"
    android:background="#FFF9C4"
    android:orientation="vertical">
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/Player_1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:hint="@string/enter_1st_player_name"
        android:textAllCaps="true"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/Player_2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_2nd_player_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light" />
<LinearLayout
    android:layout_marginTop="50dp"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:onClick="Players_Turn"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:id="@+id/Button_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:hint="@string/click_me"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        />
    <Button
        android:onClick="Players_Turn"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:id="@+id/Button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/click_me"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"/>
    <Button
        android:onClick="Players_Turn"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:id="@+id/Button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/click_me"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"/>
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:onClick="Players_Turn"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/Button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/click_me"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textAlignment="center"
            />
        <Button
            android:onClick="Players_Turn"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/Button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/click_me"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textAlignment="center"/>
        <Button
            android:onClick="Players_Turn"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/Button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/click_me"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:onClick="Players_Turn"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/Button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/click_me"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textAlignment="center"
            />
        <Button
            android:onClick="Players_Turn"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/Button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/click_me"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textAlignment="center"/>
        <Button
            android:onClick="Players_Turn"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/Button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/click_me"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textAlignment="center"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:text="@string/player_one_score"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         />
    <TextView
        android:id="@+id/player_1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_dark"
        android:layout_marginLeft="100dp"
        android:textAllCaps="true"
        android:layout_marginStart="100dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textAllCaps="true"
        android:text="@string/player_two_score"
        />
    <TextView
        android:id="@+id/player2_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_dark"
        android:layout_marginLeft="100dp"
        android:textAllCaps="true"
        android:layout_marginStart="100dp" />
</LinearLayout>
